syntax = "proto3";
package modules;

option go_package = "github.com/autonomouskoi/akcore/modules";

import "modules/config.proto";
import "modules/manifest.proto";

enum BusTopics {
    MODULE_EVENT   = 0;
    MODULE_REQUEST = 1;
    MODULE_COMMAND = 2;
    CONTROL = 3;
    STATE   = 4;
}

enum MessageTypeEvent {
    MODULE_CURRENT_STATE = 0;
}

message ModuleCurrentStateEvent {
    string       module_id    = 1;
    ModuleState  module_state = 2;
    Config       config       = 3;
}

enum MessageTypeRequest {
    MODULES_LIST_REQ  = 0;
    MODULES_LIST_RESP = 1;
}

message ModuleListEntry {
    Manifest            manifest = 1;
    CurrentModuleState  state    = 2;
}

message ModulesListRequest {}
message ModulesListResponse {
    repeated  ModuleListEntry  entries = 1;
}

enum MessageTypeCommand {
    MODULE_AUTOSTART_SET_REQ  = 0;
    MODULE_AUTOSTART_SET_RESP = 1;
    MODULE_STATE_SET_REQ      = 2;
    MODULE_STATE_SET_RESP     = 3;
}

message ModuleAutostartSetRequest {
    string  module_id = 1;
    bool    autostart = 2;
}
message ModuleAutostartSetResponse {}

message ModuleStateSetRequest {
    string       module_id = 1;
    ModuleState  state     = 2;
}
message ModuleStateSetResponse {}

enum MessageType {
    TYPE_UNSPECIFIED             = 0;
    TYPE_CURRENT_STATE           = 1;
    TYPE_CHANGE_STATE            = 2;
    TYPE_GET_CURRENT_STATES      = 3;
    TYPE_GET_MANIFEST_REQ        = 4;
    TYPE_GET_MANIFEST_RESP       = 5;
    TYPE_CHANGE_MODULE_AUTOSTART = 6;
}

enum ModuleState {
    UNSPECIFIED = 0;
    UNSTARTED   = 1;
    STARTED     = 2;
    STOPPED     = 3;
    FAILED      = 4;
    FINISHED    = 5;
}

message CurrentModuleState {
    string       module_id    = 1;
    ModuleState  module_state = 2;
    Config       config       = 3;
}

message ChangeModuleState {
    string       module_id  = 1;
    ModuleState  module_state = 2;
}

message GetManifestRequest {
    string  module_id = 1;
}

message GetManifestResponse {
    Manifest  manifest = 1;
}

message ChangeModuleAutostart {
    string  module_id = 1;
    bool    autostart = 2;
}